--- a/resources/less/tibia/left-column.less
+++ b/resources/less/tibia/left-column.less
@@ -1,4 +1,6 @@
 #left-column {
+	position: relative;
+
 	#logo-artwork {
 		background: url('../img/tibia-logo-artwork-top.gif');
 		position: absolute;
@@ -11,7 +13,7 @@
 	}
 
 	.box {
-		margin: 7px 8px 32px;
+		margin: 7px 8px 34px;
 		position: relative;
 		width: 164px;
 
@@ -28,7 +30,7 @@
 		&:after {
 			content: url('../img/box-bottom.gif');
 			position: absolute;
-			bottom: -9px;
+			bottom: -11px;
 			height: 12px;
 			width: 180px;
 			right: -8px;
@@ -37,7 +39,10 @@
 
 		.inner-box {
 			background: url('../img/loginbox-textfield-background.gif') repeat top left;
+			display: inline-block;
 			position: relative;
+			margin: 0 0 0 1px;
+			width: 162px;
 
 			&:before {
 				background: url('../img/chain.gif') repeat;
@@ -58,112 +63,138 @@
 				top: -4px;
 				bottom: 0;
 			}
+		}
+	}
 
-			&#navigation {
-				background: #0d2e2b;
-				margin: 0 0 0 1px;
-				list-style: none;
-				width: 162px;
-				color: #fff;
+	.box#login-box {
+		.medium-button {
+			background: url('../img/medium-button.gif') no-repeat top left;
+			text-align: center;
+			margin: 1px auto 0;
+			line-height: 37px;
+			display: block;
+			height: 37px;
+			width: 150px;
+
+			&:hover {
+				background-position-y: -37px;
+			}
+		}
+
+		.create-account {
+			background: url('../img/loginbox-font-create-account.gif') no-repeat top left;
+			margin: 2px auto 1px;
+			display: block;
+			height: 11px;
+			width: 124px;
+
+			&:hover {
+				background-position-y: -11px;
+			}
+		}
+	}
+
+	.box#navigation .inner-box {
+		background: #0d2e2b;
+		list-style: none;
+		color: #fff;
+		padding: 0;
+
+		.navigation-item {
+			margin: 0 0 0 -1px;
+			padding: 0;
+
+			&.open {
+				.navigation-content {
+					display: block;
+				}
+				
+				.navigation-button .light {
+					display: none;
+
+					&.bottom-right {
+						background-image: url('../img/minus.gif');
+						display: block;
+					}
+				}
+			}
+
+			.navigation-button {
+				background: url('../img/button-background.gif') no-repeat top left;
+				position: relative;
+				cursor: pointer;
+				margin: 0 -3px;
+				outline: none;
+				border: none;
+				height: 32px;
+				width: 170px;
 				padding: 0;
+				z-index: 2;
 
-				.navigation-item {
-					margin: 0 0 0 -1px;
+				&:hover {
+					background-position-y: -32px;
+				}
+
+				.light {
+					background: url('../img/green-light.gif') no-repeat;
+					position: absolute;
+					display: block;
+					height: 2px;
+					width: 2px;
+
+					&.top-left {
+						left: 3px;
+						top: 2px;
+					}
+
+					&.top-right {
+						right: 3px;
+						top: 2px;
+					}
+
+					&.bottom-left {
+						bottom: 2px;
+						left: 3px;
+					}
+
+					&.bottom-right {
+						background-image: url('../img/plus.gif');
+						height: 12px;
+						width: 12px;
+						right: -2px;
+						bottom: 0;
+					}
+				}
+			}
+
+			.navigation-content {
+				display: none;
+				padding: 0;
+				margin: 0;
+
+				& > ul {
+					list-style: none;
 					padding: 0;
+					margin: 0;
 
-					&.open {
-						.navigation-content {
-							display: block;
-						}
-						
-						.navigation-button .light {
-							display: none;
-
-							&.bottom-right {
-								background-image: url('../img/minus.gif');
-								display: block;
-							}
-						}
-					}
-
-					.navigation-button {
-						background: url('../img/button-background.gif') no-repeat top left;
-						position: relative;
-						cursor: pointer;
-						margin: 0 -3px;
-						outline: none;
-						border: none;
-						height: 32px;
-						width: 170px;
-						padding: 0;
-						z-index: 2;
-
-						&:hover {
-							background-position-y: -32px;
-						}
-
-						.light {
-							background: url('../img/green-light.gif') no-repeat;
-							position: absolute;
-							display: block;
-							height: 2px;
-							width: 2px;
-
-							&.top-left {
-								left: 3px;
-								top: 2px;
-							}
-
-							&.top-right {
-								right: 3px;
-								top: 2px;
-							}
-
-							&.bottom-left {
-								bottom: 2px;
-								left: 3px;
-							}
-
-							&.bottom-right {
-								background-image: url('../img/plus.gif');
-								height: 12px;
-								width: 12px;
-								right: -2px;
-								bottom: 0;
-							}
-						}
-					}
-
-					.navigation-content {
-						display: none;
+					& > li {
 						padding: 0;
 						margin: 0;
 
-						& > ul {
-							list-style: none;
-							padding: 0;
-							margin: 0;
+						& > a {
+							border-bottom: 1px solid #4b7874;
+							font-family: Arial, sans-serif;
+							padding: 2px 0 2px 17px;
+							text-decoration: none;
+							font-weight: bold;
+							line-height: 16px;
+							font-size: 13px;
+							display: block;
+							color: #d7d7d7;
 
-							& > li {
-								padding: 0;
-								margin: 0;
-
-								& > a {
-									border-bottom: 1px solid #4b7874;
-									font-family: Arial, sans-serif;
-									padding: 2px 0 2px 15px;
-									text-decoration: none;
-									font-weight: bold;
-									line-height: 16px;
-									font-size: 13px;
-									display: block;
-									color: #d7d7d7;
-
-									&:hover {
-										background-color: #14433f;
-										color: #fff;
-									}
-								}
+							&:hover {
+								background-color: #14433f;
+								color: #fff;
 							}
 						}
 					}
