--- a/resources/less/tibia/layout.less
+++ b/resources/less/tibia/layout.less
@@ -1,11 +1,16 @@
+html {
+	min-width: 1000px;
+}
+
 body {
 	background: url('../img/background-artwork.jpg') no-repeat top center #051122;
 	font-family: 'lucida grande', tahoma, verdana, arial, sans-serif;
+	overflow-y: scroll;
 	font-size: 13px;
 }
 
 #skeleton {
-	margin: 160px auto 20px;
+	margin: 161px auto 20px;
 	max-width: 1200px;
 	min-width: 1000px;
 	display: block;
@@ -24,12 +29,12 @@ body {
 		}
 
 		&#middle-column {
-			//background-color: rgba(255, 255, 255, .3);
+			background-color: rgba(255, 255, 255, .3);
 			margin: 0 210px;
 		}
 
 		&#right-column {
-			//background-color: rgba(255, 255, 255, .3);
+			background-color: rgba(255, 255, 255, .3);
 			margin: 0 15px;
 			width: 180px;
 			float: right;
