--- a/resources/less/tibia/left-column.less
+++ b/resources/less/tibia/left-column.less
@@ -131,8 +131,21 @@
 				padding: 0;
 				z-index: 2;
 
+				.clearfix;
+
 				&:hover {
 					background-position-y: -32px;
+				}
+
+				.icon {
+					margin-left: 8px;
+					float: left;
+				}
+
+				.label {
+					margin-left: 2px;
+					margin-top: 6px;
+					float: left;
 				}
 
 				.light {
