--- a/resources/less/tibia/mixins.less
+++ b/resources/less/tibia/mixins.less
@@ -8,3 +8,10 @@
 		clear: both;
 	}
 }
+
+.no-selection() {
+	-webkit-user-select: none; /* webkit (safari, chrome) browsers */
+	-moz-user-select: none; /* mozilla browsers */
+	-khtml-user-select: none; /* webkit (konqueror) browsers */
+	-ms-user-select: none; /* IE10+ */
+}
