--- a/resources/less/tibia/left-column.less
+++ b/resources/less/tibia/left-column.less
@@ -9,7 +9,7 @@
 		width: 196px;
 		top: -158px;
 		left: -10px;
-		z-index: 3;
+		z-index: 5;
 	}
 
 	.box {
@@ -24,7 +24,7 @@
 			width: 180px;
 			top: -13px;
 			left: -8px;
-			z-index: 2;
+			z-index: 4;
 		}
 
 		&:after {
@@ -34,7 +34,7 @@
 			height: 12px;
 			width: 180px;
 			right: -8px;
-			z-index: 2;
+			z-index: 4;
 		}
 
 		.inner-box {
@@ -48,6 +48,7 @@
 				background: url('../img/chain.gif') repeat;
 				position: absolute;
 				content: '';
+				z-index: 2;
 				width: 7px;
 				left: -4px;
 				top: -4px;
@@ -58,6 +59,7 @@
 				background: url('../img/chain.gif') repeat;
 				position: absolute;
 				content: '';
+				z-index: 2;
 				right: -4px;
 				width: 7px;
 				top: -4px;
@@ -109,7 +111,7 @@
 					display: block;
 				}
 				
-				.navigation-button .light {
+				.navigation-button .crystals {
 					&.top { display: none; }
 					&.bottom {
 						&:before {
@@ -133,7 +135,7 @@
 				height: 32px;
 				width: 170px;
 				padding: 0;
-				z-index: 2;
+				z-index: 3;
 
 				.no-selection;
 				.clearfix;
@@ -155,7 +157,7 @@
 					float: left;
 				}
 
-				.light {
+				.crystals {
 					position: absolute;
 					display: block;
 					height: 100%;
@@ -209,6 +211,23 @@
 						padding: 0;
 						margin: 0;
 
+						&.active {
+							position: relative;
+
+							&:before {
+								content: url('../img/icon-activesubmenu.gif');
+								position: absolute;
+								height: 10px;
+								width: 10px;
+								left: 5px;
+								top: 2px;
+							}
+
+							& > a {
+								color: #fff;
+							}
+						}
+
 						& > a {
 							border-bottom: 1px solid #4b7874;
 							font-family: Arial, sans-serif;
@@ -216,6 +235,7 @@
 							text-decoration: none;
 							font-weight: bold;
 							line-height: 16px;
+							margin-left: 1px;
 							font-size: 13px;
 							display: block;
 							color: #d7d7d7;
