Login, Registration & general cleanups

--- a/resources/less/tibia.less
+++ b/resources/less/tibia.less
@@ -1,4 +1,8 @@
-@import 'tibia/mixins.less';
-@import 'tibia/layout.less';
-@import 'tibia/left-column.less';
-@import 'tibia/middle-column.less';
+@import 'tibia/mixins';
+@import 'tibia/layout';
+@import 'tibia/left-column';
+@import 'tibia/middle-column';
+@import 'tibia/right-column';
+@import 'tibia/table';
+
+@import 'tibia/content/account';
