--- a/assets/css/tibia.css
+++ b/assets/css/tibia.css
@@ -6,9 +6,177 @@ body {
   font-family: 'lucida grande', tahoma, verdana, arial, sans-serif;
   overflow-y: scroll;
   font-size: 13px;
+  margin: 0;
+}
+a {
+  font-family: Verdana, Arial, Times New Roman, sans-serif;
+  text-decoration: none;
+  font-weight: bold;
+  color: #004294;
+}
+a:hover {
+  text-decoration: underline;
+}
+a img {
+  border: none;
+}
+h1 {
+  font-family: Verdana, Arial, 'Times New Roman', sans-serif;
+  text-align: center;
+  font-weight: bold;
+  font-size: 24px;
+  margin: 16px 0;
+  color: #5a2800;
+}
+.medium-button {
+  background: url('../img/medium-button.gif') no-repeat top left;
+  text-align: center;
+  line-height: 37px;
+  margin: 0 0 2px;
+  cursor: pointer;
+  display: block;
+  height: 37px;
+  width: 150px;
+  border: none;
+  padding: 0;
+}
+.medium-button:hover {
+  background-position-y: -37px;
+}
+.green-button {
+  background: url('../img/sbutton_green.gif') no-repeat top left;
+  text-align: center;
+  line-height: 25px;
+  margin: 0 0 2px;
+  cursor: pointer;
+  display: block;
+  height: 25px;
+  width: 135px;
+  border: none;
+  padding: 0;
+}
+.green-button:hover {
+  background-position-y: -25px;
+}
+.blue-button {
+  background: url('../img/sbutton_blue.gif') no-repeat top left;
+  text-align: center;
+  line-height: 25px;
+  margin: 0 0 2px;
+  cursor: pointer;
+  display: block;
+  height: 25px;
+  width: 135px;
+  border: none;
+  padding: 0;
+}
+.blue-button:hover {
+  background-position-y: -25px;
+}
+.blue-button:hover img {
+  margin: 1px 0 0 1px;
+}
+.error {
+  color: #ed1111;
+}
+.errors {
+  font-family: Verdana, Arial, 'Times New Roman', sans-serif;
+  background-color: #d4c0a1;
+  padding: 8px 5px 8px 42px;
+  margin: 6px 6px 16px;
+  position: relative;
+  font-size: 10.6px;
+  min-height: 24px;
+  color: #ed1111;
+}
+.errors h5 {
+  font-weight: bold;
+  font-size: 10.6px;
+  padding: 0;
+  margin: 0;
+}
+.errors .sign {
+  background: url('../img/attentionsign.gif');
+  position: absolute;
+  height: 26px;
+  width: 30px;
+  left: 7px;
+  top: 6px;
+}
+.errors:before {
+  background: url('../img/box-frame-vertical.gif');
+  position: absolute;
+  content: '';
+  width: 3px;
+  left: -1px;
+  bottom: 0;
+  top: 0;
+}
+.errors:after {
+  background: url('../img/box-frame-vertical.gif');
+  position: absolute;
+  content: '';
+  right: -1px;
+  width: 3px;
+  bottom: 0;
+  top: 0;
+}
+.errors > .borders:before {
+  background: url('../img/table-headline-border.gif');
+  position: absolute;
+  content: '';
+  height: 4px;
+  top: -1px;
+  right: 0;
+  left: 0;
+}
+.errors > .borders:after {
+  background: url('../img/table-headline-border.gif');
+  position: absolute;
+  bottom: -1px;
+  content: '';
+  height: 4px;
+  right: 0;
+  left: 0;
+}
+.errors > .borders > .edges.top:before {
+  background: url('../img/box-frame-edge.gif');
+  position: absolute;
+  content: '';
+  height: 5px;
+  width: 5px;
+  left: -2px;
+  top: -2px;
+}
+.errors > .borders > .edges.top:after {
+  background: url('../img/box-frame-edge.gif');
+  position: absolute;
+  content: '';
+  height: 5px;
+  right: -2px;
+  width: 5px;
+  top: -2px;
+}
+.errors > .borders > .edges.bottom:before {
+  background: url('../img/box-frame-edge.gif');
+  position: absolute;
+  bottom: -2px;
+  content: '';
+  height: 5px;
+  width: 5px;
+  left: -2px;
+}
+.errors > .borders > .edges.bottom:after {
+  background: url('../img/box-frame-edge.gif');
+  position: absolute;
+  bottom: -2px;
+  content: '';
+  height: 5px;
+  right: -2px;
+  width: 5px;
 }
 #skeleton {
-  margin: 161px auto 20px;
+  margin: 156px auto 20px;
   max-width: 1200px;
   min-width: 1000px;
   display: block;
@@ -17,7 +185,6 @@ body {
 #skeleton .column {
   position: relative;
   display: block;
-  height: 500px;
 }
 #skeleton .column#left-column {
   margin: 0 15px;
@@ -28,7 +195,6 @@ body {
   margin: 0 210px;
 }
 #skeleton .column#right-column {
-  background-color: rgba(255, 255, 255, 0.3);
   margin: 0 15px;
   width: 180px;
   float: right;
@@ -42,32 +208,35 @@ body {
   display: block;
   height: 158px;
   width: 196px;
-  top: -158px;
+  top: -153px;
   left: -10px;
   z-index: 5;
 }
 #left-column .box {
-  margin: 7px 8px 34px;
+  margin: 0 8px 10px;
   position: relative;
+  padding: 12px 0;
   width: 164px;
 }
 #left-column .box:before {
-  content: url('../img/box-top.gif');
+  background: url('../img/box-top.gif');
   position: absolute;
   height: 12px;
   width: 180px;
-  top: -13px;
+  content: '';
   left: -8px;
   z-index: 4;
+  top: 0;
 }
 #left-column .box:after {
-  content: url('../img/box-bottom.gif');
+  background: url('../img/box-bottom.gif');
   position: absolute;
-  bottom: -11px;
   height: 12px;
   width: 180px;
+  content: '';
   right: -8px;
   z-index: 4;
+  bottom: 0;
 }
 #left-column .box .inner-box {
   background: url('../img/loginbox-textfield-background.gif') repeat top left;
@@ -97,16 +266,7 @@ body {
   bottom: 0;
 }
 #left-column .box#login-box .medium-button {
-  background: url('../img/medium-button.gif') no-repeat top left;
-  text-align: center;
   margin: 1px auto 0;
-  line-height: 37px;
-  display: block;
-  height: 37px;
-  width: 150px;
-}
-#left-column .box#login-box .medium-button:hover {
-  background-position-y: -37px;
 }
 #left-column .box#login-box .create-account {
   background: url('../img/loginbox-font-create-account.gif') no-repeat top left;
@@ -131,14 +291,15 @@ body {
 #left-column .box#navigation .inner-box .navigation-item.open .navigation-content {
   display: block;
 }
-#left-column .box#navigation .inner-box .navigation-item.open .navigation-button .crystals.top {
-  display: none;
+#left-column .box#navigation .inner-box .navigation-item.open .navigation-button .crystals.top:before,
+#left-column .box#navigation .inner-box .navigation-item.open .navigation-button .crystals.top:after {
+  content: none;
 }
 #left-column .box#navigation .inner-box .navigation-item.open .navigation-button .crystals.bottom:before {
-  display: none;
+  content: none;
 }
 #left-column .box#navigation .inner-box .navigation-item.open .navigation-button .crystals.bottom:after {
-  content: url('../img/minus.gif');
+  background: url('../img/minus.gif');
 }
 #left-column .box#navigation .inner-box .navigation-item .navigation-button {
   background: url('../img/button-background.gif') no-repeat top left;
@@ -189,28 +350,40 @@ body {
   width: 100%;
 }
 #left-column .box#navigation .inner-box .navigation-item .navigation-button .crystals.top:before {
-  content: url('../img/green-light.gif');
+  background: url('../img/green-light.gif');
   position: absolute;
+  content: '';
+  height: 2px;
+  width: 2px;
   left: 3px;
-  top: -9px;
+  top: 2px;
 }
 #left-column .box#navigation .inner-box .navigation-item .navigation-button .crystals.top:after {
-  content: url('../img/green-light.gif');
+  background: url('../img/green-light.gif');
   position: absolute;
+  content: '';
+  height: 2px;
+  width: 2px;
   right: 3px;
-  top: -9px;
+  top: 2px;
 }
 #left-column .box#navigation .inner-box .navigation-item .navigation-button .crystals.bottom:before {
-  content: url('../img/green-light.gif');
+  background: url('../img/green-light.gif');
   position: absolute;
-  bottom: -1px;
+  bottom: 2px;
+  content: '';
+  height: 2px;
+  width: 2px;
   left: 3px;
 }
 #left-column .box#navigation .inner-box .navigation-item .navigation-button .crystals.bottom:after {
-  content: url('../img/plus.gif');
+  background: url('../img/plus.gif');
   position: absolute;
-  bottom: -3px;
+  height: 12px;
+  width: 12px;
   right: -2px;
+  content: '';
+  bottom: 0;
 }
 #left-column .box#navigation .inner-box .navigation-item .navigation-content {
   display: none;
@@ -247,10 +420,10 @@ body {
   text-decoration: none;
   font-weight: bold;
   line-height: 16px;
-  margin-left: 1px;
-  font-size: 13px;
+  font-size: 13.3px;
   display: block;
   color: #d7d7d7;
+  width: 145px;
 }
 #left-column .box#navigation .inner-box .navigation-item .navigation-content > ul > li > a:hover {
   background-color: #14433f;
@@ -258,93 +431,373 @@ body {
 }
 #middle-column {
   position: relative;
-  padding-top: 5px;
+  padding-top: 4px;
 }
-#middle-column .box {
+#middle-column > .box {
   background: url('../img/scroll.gif') repeat top left;
   border-right: 2px solid #3a3738;
   border-left: 2px solid #3a3738;
   position: relative;
-  margin: 0 0 34px;
+  margin: 0 0 18px;
+  padding: 6px 0;
 }
-#middle-column .box:before {
+#middle-column > .box:before {
   background: url('../img/border-1.gif') repeat-x top left;
   position: absolute;
   height: 6px;
   content: '';
   right: -2px;
   left: -2px;
-  top: -6px;
+  top: 0;
 }
-#middle-column .box:after {
+#middle-column > .box:after {
   background: url('../img/border-1.gif') repeat-x top left;
   position: absolute;
-  bottom: -6px;
   height: 6px;
   content: '';
   right: -2px;
   left: -2px;
+  bottom: 0;
 }
-#middle-column .box .corners {
+#middle-column > .box > .corners {
   position: absolute;
   z-index: 2;
   right: 0;
   left: 0;
 }
-#middle-column .box .corners.top {
+#middle-column > .box > .corners.top {
   top: 0;
 }
-#middle-column .box .corners.top:before {
+#middle-column > .box > .corners.top:before {
   content: url('../img/corner-tl.gif');
   position: absolute;
   height: 17px;
   width: 17px;
   left: -5px;
-  top: -10px;
+  top: -4px;
 }
-#middle-column .box .corners.top:after {
+#middle-column > .box > .corners.top:after {
   content: url('../img/corner-tr.gif');
   position: absolute;
   height: 17px;
   width: 17px;
   right: -5px;
-  top: -10px;
+  top: -4px;
 }
-#middle-column .box .corners.bottom {
+#middle-column > .box > .corners.bottom {
   bottom: 0;
 }
-#middle-column .box .corners.bottom:before {
+#middle-column > .box > .corners.bottom:before {
   content: url('../img/corner-bl.gif');
   position: absolute;
-  bottom: -10px;
+  bottom: -4px;
   height: 17px;
   width: 17px;
   left: -5px;
 }
-#middle-column .box .corners.bottom:after {
+#middle-column > .box > .corners.bottom:after {
   content: url('../img/corner-br.gif');
   position: absolute;
-  bottom: -10px;
+  bottom: -4px;
   height: 17px;
   width: 17px;
   right: -5px;
 }
-#middle-column .box .header {
+#middle-column > .box > .header {
   background: url('../img/title-background-green.gif') repeat-x top left;
-  overflow: hidden;
   display: block;
   height: 24px;
 }
-#middle-column .box .header .headline {
+#middle-column > .box > .header .headline {
   margin-left: 5px;
   display: block;
 }
-#middle-column .box .inner-box-border {
+#middle-column > .box > .inner-box-border {
   border: 4px solid #debb9d;
 }
-#middle-column .box .inner-box-border .inner-box {
+#middle-column > .box > .inner-box-border > .inner-box {
   border: 1px solid #793d03;
   padding: 5px;
+}
+#right-column {
+  position: relative;
+}
+#right-column #pedestal {
+  background: url('../img/pedestal-and-online.gif');
+  position: absolute;
+  display: block;
+  height: 107px;
+  width: 153px;
+  top: -102px;
+  left: 14px;
+  z-index: 3;
+}
+#right-column #pedestal .monster {
+  position: absolute;
+  cursor: pointer;
+  height: 80px;
+  width: 80px;
+  top: -32px;
+  left: 17px;
+  z-index: 4;
+}
+#right-column #pedestal .online {
+  font-family: Verdana, Arial, Times New Roman, sans-serif;
+  text-decoration: none;
+  text-align: center;
+  position: absolute;
+  line-height: 8pt;
+  cursor: pointer;
+  display: block;
+  font-size: 7pt;
+  color: #cfa600;
+  bottom: 13px;
+  width: 100%;
+}
+#right-column .box {
+  position: relative;
+  padding: 12px 0 12px;
+  margin: 0 8px 10px;
+  display: block;
+  width: 164px;
+}
+#right-column .box:before {
+  background: url('../img/box-top.gif');
+  position: absolute;
+  height: 12px;
+  width: 180px;
+  content: '';
+  left: -8px;
+  z-index: 2;
+  top: 0;
+}
+#right-column .box:after {
+  background: url('../img/box-bottom.gif');
+  position: absolute;
+  height: 12px;
+  width: 180px;
+  right: -8px;
+  content: '';
+  z-index: 2;
+  bottom: 0;
+}
+#right-column .box.premium {
+  background: url('../img/premiumbox.gif') no-repeat top left;
+  display: inline-block;
+  padding: 0 0 12px;
+  margin: 0 0 10px;
+  height: 152px;
+  width: 180px;
+}
+#right-column .box.premium:before {
+  content: none;
+}
+#right-column .box.premium:after {
+  right: 0;
+}
+#right-column .box.premium .inner-box {
+  margin: 35px 9px 5px;
+  background: none;
+  border-width: 0;
+}
+#right-column .box.premium .inner-box .green-button {
+  margin: 79px auto 0;
+}
+#right-column .box.networks {
+  background: url('../img/networksbox.png') no-repeat top left;
+  display: inline-block;
+  padding: 0 0 12px;
+  margin: 0 0 10px;
+  height: 192px;
+  width: 180px;
+}
+#right-column .box.networks:before {
+  content: none;
+}
+#right-column .box.networks:after {
+  right: 0;
+}
+#right-column .box.networks .inner-box {
+  margin: 35px 9px 5px;
+  background: none;
+  border-width: 0;
+}
+#right-column .box.screenshots {
+  padding-top: 31px;
+}
+#right-column .box.screenshots:before {
+  background: url('../img/screenshotbox.gif');
+  height: 31px;
+  left: -8px;
+  top: 0;
+}
+#right-column .box.screenshots .inner-box {
+  display: block;
+  width: 162px;
+  padding: 0;
+}
+#right-column .box .inner-box {
+  background: url('../img/scroll.gif') repeat top left;
+  -o-border-image: url('../img/frame.png') 5 4 fill;
+     border-image: url('../img/frame.png') 5 4 fill;
+  display: inline-block;
+  border-width: 5px 4px;
+  border-style: solid;
+  margin-left: -3px;
+  padding: 5px;
+  width: 152px;
+}
+#right-column .box .inner-box img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+table tr td,
+table tr th {
+  padding: 2px 4px;
+}
+table tr th {
+  padding-right: 11px;
+  text-align: left;
+}
+.table {
+  font-family: Verdana, Arial, 'Times New Roman', sans-serif;
+  border: 1px solid #000;
+  position: relative;
+  font-size: 13.3px;
+  color: #5a2800;
+  margin: 5px;
+}
+.table > .header {
+  background-color: #5f4d41;
+  padding: 6px 14px 7px;
+  position: relative;
+  font-weight: bold;
+  color: #fff;
+}
+.table > .header:before {
+  background: url('../img/box-frame-vertical.gif');
+  position: absolute;
+  content: '';
+  width: 3px;
+  left: -1px;
+  bottom: 0;
+  top: 0;
+}
+.table > .header:after {
+  background: url('../img/box-frame-vertical.gif');
+  position: absolute;
+  content: '';
+  right: -1px;
+  width: 3px;
+  bottom: 0;
+  top: 0;
+}
+.table > .header > .borders:before {
+  background: url('../img/table-headline-border.gif');
+  position: absolute;
+  content: '';
+  height: 4px;
+  top: -1px;
+  right: 0;
+  left: 0;
+}
+.table > .header > .borders:after {
+  background: url('../img/table-headline-border.gif');
+  position: absolute;
+  bottom: -1px;
+  content: '';
+  height: 4px;
+  right: 0;
+  left: 0;
+}
+.table > .header > .borders > .edges.top:before {
+  background: url('../img/box-frame-edge.gif');
+  position: absolute;
+  content: '';
+  height: 5px;
+  width: 5px;
+  left: -2px;
+  top: -2px;
+}
+.table > .header > .borders > .edges.top:after {
+  background: url('../img/box-frame-edge.gif');
+  position: absolute;
+  content: '';
+  height: 5px;
+  right: -2px;
+  width: 5px;
+  top: -2px;
+}
+.table > .header > .borders > .edges.bottom:before {
+  background: url('../img/box-frame-edge.gif');
+  position: absolute;
+  bottom: -2px;
+  content: '';
+  height: 5px;
+  width: 5px;
+  left: -2px;
+}
+.table > .header > .borders > .edges.bottom:after {
+  background: url('../img/box-frame-edge.gif');
+  position: absolute;
+  bottom: -2px;
+  content: '';
+  height: 5px;
+  right: -2px;
+  width: 5px;
+}
+.table > .content {
+  background-color: #f1e0c5;
+  border: 2px solid #55636c;
+  padding: 7px 6px 0;
+  border-top: none;
+}
+.table > .content > .box {
+  box-shadow: 2px 3px 2px #7c5231;
+  background-color: #d4c0a1;
+  border: 1px solid #5f4d41;
+  margin-bottom: 9px;
+  margin-right: 2px;
+}
+.table > .content > .box > .inner-box {
+  border: 1px solid #faf0d7;
+  box-sizing: border-box;
+  padding: 2px 4px 0;
+  overflow: hidden;
+  width: 100%;
+}
+.table > .content > .box > .inner-box:before,
+.table > .content > .box > .inner-box:after {
+  content: " ";
+  display: table;
+}
+.table > .content > .box > .inner-box:after {
+  clear: both;
+}
+.account-login #middle-column .buttons-right {
+  margin-right: 2px;
+  float: right;
+}
+.account-login #middle-column .information {
+  padding-bottom: 4px;
+  font-size: 16px;
+}
+.account-login #middle-column .information .buttons-right {
+  margin-top: 19px;
+}
+.account-login #middle-column .information .indent {
+  margin: 0 0 0 10px;
+}
+.account-create #middle-column label[for="male"] {
+  display: inline-block;
+  margin-right: 60px;
+}
+.account-create #middle-column p {
+  margin: 5px 0;
+}
+.account-create #middle-column button.blue-button {
+  margin: 0 auto;
 }
 
 /*# sourceMappingURL=tibia.css.map */
