--- a/resources/less/tibia/left-column.less
+++ b/resources/less/tibia/left-column.less
@@ -87,11 +87,24 @@
 				background-position-y: -11px;
 			}
 		}
+
+		.logout {
+			background: url('../img/loginbox-font-logout.gif') no-repeat top left;
+			margin: 2px auto 1px;
+			display: block;
+			height: 11px;
+			width: 124px;
+
+			&:hover {
+				background-position-y: -11px;
+			}
+		}
 	}
 
 	.box#navigation .inner-box {
 		background: #0d2e2b;
 		list-style: none;
+		display: block;
 		color: #fff;
 		padding: 0;
 
