--- a/assets/css/tibia.css
+++ b/assets/css/tibia.css
@@ -278,9 +278,20 @@ h1 {
 #left-column .box#login-box .create-account:hover {
   background-position-y: -11px;
 }
+#left-column .box#login-box .logout {
+  background: url('../img/loginbox-font-logout.gif') no-repeat top left;
+  margin: 2px auto 1px;
+  display: block;
+  height: 11px;
+  width: 124px;
+}
+#left-column .box#login-box .logout:hover {
+  background-position-y: -11px;
+}
 #left-column .box#navigation .inner-box {
   background: #0d2e2b;
   list-style: none;
+  display: block;
   color: #fff;
   padding: 0;
 }
